--- a/app/src/main/res/layout/friend_fragment.xml
+++ b/app/src/main/res/layout/friend_fragment.xml
@@ -29,6 +29,7 @@
                 android:id="@+id/listView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:divider="@color/transparent"
                 android:scrollbars="none" />
 
             <com.example.gy.musicgame.friend.SideBar
