--- a/app/src/main/res/layout/friend_header.xml
+++ b/app/src/main/res/layout/friend_header.xml
@@ -30,6 +30,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
+        android:layout_marginStart="@dimen/btn_height"
+        android:layout_marginLeft="@dimen/btn_height"
         android:background="@color/normal" />
 
     <LinearLayout
