--- a/app/src/main/res/layout/friend_item.xml
+++ b/app/src/main/res/layout/friend_item.xml
@@ -42,4 +42,11 @@
             android:textSize="16sp" />
     </LinearLayout>
 
+    <View
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginStart="@dimen/btn_height"
+        android:layout_marginLeft="@dimen/btn_height"
+        android:background="@color/normal" />
 </LinearLayout>
