--- a/app/src/main/res/layout/message_fragment.xml
+++ b/app/src/main/res/layout/message_fragment.xml
@@ -6,8 +6,21 @@
     tools:context=".fragment.info.MessageFragment">
 
     <TextView
+        android:id="@+id/tv_no_info"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="消息" />
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="暂无消息"
+        android:textSize="@dimen/btn_size"
+        android:visibility="gone"
+        tools:ignore="HardcodedText" />
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@color/transparent"
+        android:scrollbars="none" />
 
 </FrameLayout>
