--- a/app/src/main/res/layout/me_fragment.xml
+++ b/app/src/main/res/layout/me_fragment.xml
@@ -33,6 +33,7 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/ll_local_music"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -105,6 +106,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_local_music"
                     android:layout_width="@dimen/item_size"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -241,6 +243,7 @@
                     android:text="@string/my_music_list" />
 
                 <ImageView
+                    android:id="@+id/iv_add"
                     android:layout_width="@dimen/icon_size"
                     android:layout_height="@dimen/icon_size"
                     android:layout_marginTop="@dimen/btn_margin"
