--- a/app/src/main/res/layout/back_view.xml
+++ b/app/src/main/res/layout/back_view.xml
@@ -50,5 +50,5 @@
         android:layout_marginLeft="20dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
-        android:background="@mipmap/close" />
+        android:background="@mipmap/close_normal" />
 </LinearLayout>
