--- a/app/src/main/res/layout/update_notice.xml
+++ b/app/src/main/res/layout/update_notice.xml
@@ -59,9 +59,8 @@
                 android:id="@+id/tv_sure"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/btn_height"
-                android:layout_margin="@dimen/btn_margin"
                 android:layout_weight="1"
-                android:background="@drawable/btn_selector"
+                android:background="@color/pressed"
                 android:gravity="center"
                 android:text="立即更新"
                 android:textColor="@color/white"
@@ -72,9 +71,8 @@
                 android:id="@+id/tv_cancel"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/btn_height"
-                android:layout_margin="@dimen/btn_margin"
                 android:layout_weight="1"
-                android:background="@drawable/btn_unselector"
+                android:background="@color/normal"
                 android:gravity="center"
                 android:text="以后再说"
                 android:textColor="@color/white"
