--- a/app/src/main/res/layout/me_fragment.xml
+++ b/app/src/main/res/layout/me_fragment.xml
@@ -233,6 +233,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_album_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/btn_margin"
@@ -262,13 +263,23 @@
                 android:background="@color/normal" />
 
             <TextView
+                android:id="@+id/tv_no_data"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/btn_margin"
                 android:drawablePadding="6dp"
                 android:gravity="center"
-                android:text="@string/data_empty" />
+                android:text="@string/data_empty"
+                android:visibility="gone" />
+
+            <ListView
+                android:id="@+id/listView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:divider="@color/normal"
+                android:dividerHeight="0.2dp"
+                android:scrollbars="none" />
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
