--- a/app/src/main/res/layout/activity_album_love.xml
+++ b/app/src/main/res/layout/activity_album_love.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,38 +7,26 @@
     android:orientation="vertical"
     tools:context=".activity.AlbumLoveActivity">
 
-    <LinearLayout
+
+    <com.example.gy.musicgame.view.TitleView
+        android:id="@+id/titleView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        app:showRight="false"
+        app:title="@string/my_love" />
 
-        <com.example.gy.musicgame.view.TitleView
-            android:id="@+id/titleView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:showRight="false"
-            app:title="@string/my_love" />
+    <com.jcodecraeer.xrecyclerview.XRecyclerView
+        android:id="@+id/rv_linear"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp" />
 
-        <com.scwang.smartrefresh.layout.SmartRefreshLayout
-            android:id="@+id/refreshLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:srlEnablePreviewInEditMode="true">
-            <!--srlAccentColor srlPrimaryColor 将会改变 Header 和 Footer 的主题颜色-->
-            <!--srlEnablePreviewInEditMode 可以开启和关闭预览功能-->
-            <com.scwang.smartrefresh.layout.header.ClassicsHeader
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+    <LinearLayout
+        android:id="@+id/ll_no_data"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_linear"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp" />
-
-            <com.scwang.smartrefresh.layout.footer.ClassicsFooter
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+        <include layout="@layout/empty_data" />
     </LinearLayout>
-</FrameLayout>
+</LinearLayout>
