--- a/app/src/main/res/layout/activity_album_love.xml
+++ b/app/src/main/res/layout/activity_album_love.xml
@@ -18,8 +18,7 @@
     <com.jcodecraeer.xrecyclerview.XRecyclerView
         android:id="@+id/rv_linear"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp" />
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:id="@+id/ll_no_data"
