--- a/app/src/main/res/layout/album_item_adapter.xml
+++ b/app/src/main/res/layout/album_item_adapter.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/btn_height"
     android:gravity="center"
+    android:id="@+id/ll_content"
     android:orientation="horizontal"
     android:padding="6dp">
 
