--- a/app/src/main/res/layout/me_fragment.xml
+++ b/app/src/main/res/layout/me_fragment.xml
@@ -282,30 +282,13 @@
                     android:text="@string/data_empty"
                     android:visibility="gone" />
 
-                <com.scwang.smartrefresh.layout.SmartRefreshLayout
-                    android:id="@+id/refreshLayout"
+                <com.jcodecraeer.xrecyclerview.XRecyclerView
+                    android:id="@+id/rv_linear"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:srlEnablePreviewInEditMode="true">
-                    <!--srlAccentColor srlPrimaryColor 将会改变 Header 和 Footer 的主题颜色-->
-                    <!--srlEnablePreviewInEditMode 可以开启和关闭预览功能-->
-                    <com.scwang.smartrefresh.layout.header.ClassicsHeader
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-                    <ListView
-                        android:id="@+id/listView"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="@dimen/dp_20"
-                        android:divider="@color/normal"
-                        android:dividerHeight="0.2dp"
-                        android:scrollbars="none" />
-
-                    <com.scwang.smartrefresh.layout.footer.ClassicsFooter
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-                </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+                    android:layout_marginStart="@dimen/dp_20"
+                    android:layout_marginEnd="@dimen/dp_20"
+                    android:layout_marginBottom="@dimen/dp_20" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
