--- a/app/src/main/res/layout/info_item_adapter.xml
+++ b/app/src/main/res/layout/info_item_adapter.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/ll_content"
     android:orientation="vertical">
 
     <LinearLayout
@@ -54,12 +55,4 @@
             android:text="12:15"
             tools:ignore="HardcodedText" />
     </LinearLayout>
-
-    <View
-        android:id="@+id/line"
-        android:layout_width="match_parent"
-        android:layout_height="0.2dp"
-        android:layout_marginStart="@dimen/btn_height"
-        android:layout_marginLeft="@dimen/btn_height"
-        android:background="@color/normal" />
 </LinearLayout>
