--- a/app/src/main/res/layout/activity_local_music.xml
+++ b/app/src/main/res/layout/activity_local_music.xml
@@ -17,22 +17,10 @@
             app:showRight="false"
             app:title="@string/local_music" />
 
-        <com.scwang.smartrefresh.layout.SmartRefreshLayout
-            android:id="@+id/refreshLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:srlEnablePreviewInEditMode="true">
-            <!--srlAccentColor srlPrimaryColor 将会改变 Header 和 Footer 的主题颜色-->
-            <!--srlEnablePreviewInEditMode 可以开启和关闭预览功能-->
-            <com.scwang.smartrefresh.layout.header.ClassicsHeader
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <androidx.recyclerview.widget.RecyclerView
+            <com.jcodecraeer.xrecyclerview.XRecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp" />
-        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
     </LinearLayout>
 </FrameLayout>
