--- a/app/src/main/res/layout/me_fragment.xml
+++ b/app/src/main/res/layout/me_fragment.xml
@@ -167,6 +167,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/ll_wifi"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -224,6 +225,7 @@
                         android:text="@string/default_num" />
 
                     <TextView
+                        android:id="@+id/tv_wifi"
                         android:layout_width="@dimen/item_size"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
