--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,4 +32,6 @@
     <color name="text_sub">#919191</color>
     <color name="text_hint">#c7c7c7</color>
     <color name="text_black">#404040</color>
+
+    <color name="cancel">#0576EE</color>
 </resources>
