--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,4 +62,20 @@
         <item name="android:textColor">@color/text_title</item>
         <item name="android:textSize">@dimen/text_subhead</item>
     </style>
+
+    <style name="lineH">
+        <item name="android:background">#eaeaea</item>
+        <item name="android:layout_height">0.7dp</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>
+
+    <style name="title">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">27sp</item>
+        <item name="android:textColor">#313131</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingBottom">39dp</item>
+        <item name="android:paddingTop">61dp</item>
+    </style>
 </resources>
