--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/layer_launcher"
-    tools:context="com.android.customer.music.activity.LauncherActivity">
+    tools:context=".activity.LauncherActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
