--- a/app/src/main/res/layout/contact_fragment.xml
+++ b/app/src/main/res/layout/contact_fragment.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:showBack="false"
-        app:srcRight="@mipmap/search"
+        app:srcRight="@mipmap/add_white"
         app:title="歌友" />
 
     <com.tencent.qcloud.tim.uikit.modules.contact.ContactLayout
