--- a/app/src/main/res/layout/bottom_bar.xml
+++ b/app/src/main/res/layout/bottom_bar.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:layout_gravity="bottom"
-    android:background="@color/white"
+    android:background="#F5F5F5"
     android:orientation="horizontal"
     android:padding="6dp">
 
