--- a/app/src/main/res/layout/activity_code.xml
+++ b/app/src/main/res/layout/activity_code.xml
@@ -23,6 +23,7 @@
         android:layout_marginEnd="8dp"
         android:text="扫描二维码，添加我为歌友"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rl_title"
